build/log.txt
 make                                           
[ 79%] Built target srsgui
[ 81%] Built target waterfallplot_test_c
[ 84%] Built target complexplot_test_c
[ 87%] Built target realplot_test_c
[ 89%] Built target scatterplot_test_c
[ 90%] Building CXX object test/cxx/CMakeFiles/waterfallplot_test.dir/waterfallplot_test.cpp.o
In file included from /usr/include/boost/smart_ptr/detail/requires_cxx11.hpp:9,
                 from /usr/include/boost/smart_ptr/scoped_ptr.hpp:13,
                 from /usr/include/boost/scoped_ptr.hpp:13,
                 from /home/kali/tools/srsGUI/test/cxx/waterfallplot_test.cpp:6:
/usr/include/boost/bind.hpp:36:1: note: ‘#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...) in the global namespace is deprecated. Please use <boost/bind/bind.hpp> + using namespace boost::placeholders, or define BOOST_BIND_GLOBAL_PLACEHOLDERS to retain the current behavior.’
   36 | BOOST_PRAGMA_MESSAGE(
      | ^~~~~~~~~~~~~~~~~~~~
[ 92%] Linking CXX executable waterfallplot_test
[ 92%] Built target waterfallplot_test
[ 93%] Building CXX object test/cxx/CMakeFiles/complexplot_test.dir/complexplot_test.cpp.o
In file included from /home/kali/tools/srsGUI/test/cxx/complexplot_test.cpp:7:
/usr/include/boost/progress.hpp:23:3: error: #error This header is deprecated and will be removed. (You can define BOOST_TIMER_ENABLE_DEPRECATED to suppress this error.)
   23 | # error This header is deprecated and will be removed. (You can define BOOST_TIMER_ENABLE_DEPRECATED to suppress this error.)
      |   ^~~~~
In file included from /usr/include/boost/progress.hpp:29:
/usr/include/boost/timer.hpp:21:3: error: #error This header is deprecated and will be removed. (You can define BOOST_TIMER_ENABLE_DEPRECATED to suppress this error.)
   21 | # error This header is deprecated and will be removed. (You can define BOOST_TIMER_ENABLE_DEPRECATED to suppress this error.)
      |   ^~~~~
In file included from /usr/include/boost/smart_ptr/detail/requires_cxx11.hpp:9,
                 from /usr/include/boost/smart_ptr/scoped_ptr.hpp:13,
                 from /usr/include/boost/scoped_ptr.hpp:13,
                 from /home/kali/tools/srsGUI/test/cxx/complexplot_test.cpp:5:
/usr/include/boost/progress.hpp:27:1: note: ‘#pragma message: This header is deprecated. Use the facilities in <boost/timer/timer.hpp> or <boost/timer/progress_display.hpp> instead.’
   27 | BOOST_HEADER_DEPRECATED( "the facilities in <boost/timer/timer.hpp> or <boost/timer/progress_display.hpp>" )
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/boost/timer.hpp:25:1: note: ‘#pragma message: This header is deprecated. Use the facilities in <boost/timer/timer.hpp> instead.’
   25 | BOOST_HEADER_DEPRECATED( "the facilities in <boost/timer/timer.hpp>" )
      | ^~~~~~~~~~~~~~~~~~~~~~~
/usr/include/boost/bind.hpp:36:1: note: ‘#pragma message: The practice of declaring the Bind placeholders (_1, _2, ...) in the global namespace is deprecated. Please use <boost/bind/bind.hpp> + using namespace boost::placeholders, or define BOOST_BIND_GLOBAL_PLACEHOLDERS to retain the current behavior.’
   36 | BOOST_PRAGMA_MESSAGE(
      | ^~~~~~~~~~~~~~~~~~~~
make[2]: *** [test/cxx/CMakeFiles/complexplot_test.dir/build.make:76: test/cxx/CMakeFiles/complexplot_test.dir/complexplot_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:361: test/cxx/CMakeFiles/complexplot_test.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
